--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ba92d3">  <td>25/04/10 19:19:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithInvalidCredentials()[pri:0, instance:testCases.LoginTest@72cc7e6f]">loginWithInvalidCredentials</td> 
-  <td>main@1179792105</td>   <td></td> </tr>
-<tr bgcolor="ba92d3">  <td>25/04/10 19:19:46</td>   <td>7354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:testCases.LoginTest@72cc7e6f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1179792105</td>   <td></td> </tr>
-<tr bgcolor="ba92d3">  <td>25/04/10 19:19:46</td>   <td>7354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:testCases.LoginTest@72cc7e6f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1179792105</td>   <td></td> </tr>
-<tr bgcolor="ba92d3">  <td>25/04/10 19:19:46</td>   <td>7354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:testCases.LoginTest@72cc7e6f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1179792105</td>   <td></td> </tr>
-<tr bgcolor="ba92d3">  <td>25/04/10 19:19:49</td>   <td>9865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closeBrowser(org.testng.ITestResult)[pri:0, instance:testCases.LoginTest@72cc7e6f]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1179792105</td>   <td></td> </tr>
-<tr bgcolor="ba92d3">  <td>25/04/10 19:19:49</td>   <td>9865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closeBrowser(org.testng.ITestResult)[pri:0, instance:testCases.LoginTest@72cc7e6f]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1179792105</td>   <td></td> </tr>
-<tr bgcolor="ba92d3">  <td>25/04/10 19:19:49</td>   <td>9865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closeBrowser(org.testng.ITestResult)[pri:0, instance:testCases.LoginTest@72cc7e6f]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1179792105</td>   <td></td> </tr>
-<tr bgcolor="ba92d3">  <td>25/04/10 19:19:43</td>   <td>4158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.logintoapplication()[pri:0, instance:testCases.LoginTest@72cc7e6f]">logintoapplication</td> 
-  <td>main@1179792105</td>   <td></td> </tr>
-<tr bgcolor="ba92d3">  <td>25/04/10 19:19:49</td>   <td>9849</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyURLOfApplication()[pri:0, instance:testCases.LoginTest@72cc7e6f]">verifyURLOfApplication</td> 
-  <td>main@1179792105</td>   <td></td> </tr>
+<tr bgcolor="8bac69">  <td>25/04/11 14:56:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PatientTest.setup()[pri:0, instance:testCases.PatientTest@35dab4eb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@347978868</td>   <td></td> </tr>
+<tr bgcolor="8bac69">  <td>25/04/11 14:56:10</td>   <td>8156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientTest.test()[pri:0, instance:testCases.PatientTest@35dab4eb]">test</td> 
+  <td>main@347978868</td>   <td></td> </tr>
 </table>
