--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,3 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Login working as expected</td></tr>
-<tr><td>Login successful--https://gor-pathology.web.app/dashboard</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
