Add pateint conatct details test done

--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>testCases.HomePageTest.costCalcSectionOnHomePage</td></tr>
+<tr><td>testCases.HomePageTest.todoListSectionOnHomePage</td></tr>
+<tr><td>testCases.HomePageTest.verifyCalculatorWithoutDiscount</td></tr>
 </table>
