--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,26 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.HomePageTest</td>
+<td>testCases.PatientTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>costCalcSectionOnHomePage</td>
+<td>verifyPatientrecordCreationforTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>todoListSectionOnHomePage</td>
+<td>verifyAddPatientContactDetail</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyCalculateWithDiscount</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyCalculatorWithoutDiscount</td>
+<td>verifyAddSecondaryDetail</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
