--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aab8c6">  <td>25/04/11 19:24:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.closeBrowser(org.testng.ITestResult)[pri:0, instance:testCases.HomePageTest@2034b64c]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@947553027</td>   <td></td> </tr>
-<tr bgcolor="aab8c6">  <td>25/04/11 19:24:11</td>   <td>-13154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyCalculateWithDiscount()[pri:0, instance:testCases.HomePageTest@2034b64c]">verifyCalculateWithDiscount</td> 
-  <td>main@947553027</td>   <td></td> </tr>
-<tr bgcolor="aab8c6">  <td>25/04/11 19:24:07</td>   <td>-16717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:testCases.HomePageTest@2034b64c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@947553027</td>   <td></td> </tr>
+<tr bgcolor="aab8c6">  <td>25/04/11 20:24:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PatientTest.closeBrowser(org.testng.ITestResult)[pri:0, instance:testCases.PatientTest@58cbafc2]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1552326679</td>   <td></td> </tr>
+<tr bgcolor="aab8c6">  <td>25/04/11 20:24:24</td>   <td>-27343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PatientTest.setup()[pri:0, instance:testCases.PatientTest@58cbafc2]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1552326679</td>   <td></td> </tr>
+<tr bgcolor="aab8c6">  <td>25/04/11 20:24:24</td>   <td>-27343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PatientTest.setup()[pri:0, instance:testCases.PatientTest@58cbafc2]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1552326679</td>   <td></td> </tr>
+<tr bgcolor="aab8c6">  <td>25/04/11 20:24:24</td>   <td>-27343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PatientTest.setup()[pri:0, instance:testCases.PatientTest@58cbafc2]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1552326679</td>   <td></td> </tr>
+<tr bgcolor="aab8c6">  <td>25/04/11 20:24:20</td>   <td>-31316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientTest.verifyAddSecondaryDetail()[pri:0, instance:testCases.PatientTest@58cbafc2]">verifyAddSecondaryDetail</td> 
+  <td>main@1552326679</td>   <td></td> </tr>
+<tr bgcolor="aab8c6">  <td>25/04/11 20:24:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PatientTest.closeBrowser(org.testng.ITestResult)[pri:0, instance:testCases.PatientTest@58cbafc2]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1552326679</td>   <td></td> </tr>
+<tr bgcolor="aab8c6">  <td>25/04/11 20:24:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PatientTest.closeBrowser(org.testng.ITestResult)[pri:0, instance:testCases.PatientTest@58cbafc2]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1552326679</td>   <td></td> </tr>
+<tr bgcolor="aab8c6">  <td>25/04/11 20:24:10</td>   <td>-40671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientTest.verifyAddPatientContactDetail()[pri:0, instance:testCases.PatientTest@58cbafc2]">verifyAddPatientContactDetail</td> 
+  <td>main@1552326679</td>   <td></td> </tr>
+<tr bgcolor="aab8c6">  <td>25/04/11 20:24:30</td>   <td>-21043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientTest.verifyPatientrecordCreationforTest()[pri:0, instance:testCases.PatientTest@58cbafc2]">verifyPatientrecordCreationforTest</td> 
+  <td>main@1552326679</td>   <td></td> </tr>
 </table>
