--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,3 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Subtotal calulated correctly</td></tr>
-<tr><td>The discount is applied correctly by the cost calculator.</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
